--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,73 +1,76 @@
-accelerate==0.26.1 ; python_version >= "3.9" and python_version < "3.12"
-aiohttp==3.9.1 ; python_version >= "3.9" and python_version < "3.12"
+accelerate==0.27.0 ; python_version >= "3.9" and python_version < "3.12"
+aiohttp==3.9.3 ; python_version >= "3.9" and python_version < "3.12"
 aiosignal==1.3.1 ; python_version >= "3.9" and python_version < "3.12"
 alabaster==0.7.16 ; python_version >= "3.9" and python_version < "3.12"
-appnope==0.1.3 ; python_version >= "3.9" and python_version < "3.12" and platform_system == "Darwin"
+appnope==0.1.4 ; python_version >= "3.9" and python_version < "3.12" and platform_system == "Darwin"
 asttokens==2.4.1 ; python_version >= "3.9" and python_version < "3.12"
 async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11"
 attrs==23.2.0 ; python_version >= "3.9" and python_version < "3.12"
+authlib==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
 babel==2.14.0 ; python_version >= "3.9" and python_version < "3.12"
-bandit==1.7.6 ; python_version >= "3.9" and python_version < "3.12"
-beautifulsoup4==4.12.2 ; python_version >= "3.9" and python_version < "3.12"
+bandit==1.7.7 ; python_version >= "3.9" and python_version < "3.12"
+beautifulsoup4==4.12.3 ; python_version >= "3.9" and python_version < "3.12"
 captum==0.7.0 ; python_version >= "3.9" and python_version < "3.12"
-certifi==2023.11.17 ; python_version >= "3.9" and python_version < "3.12"
-cffi==1.16.0 ; python_version >= "3.9" and python_version < "3.12" and implementation_name == "pypy"
+certifi==2024.2.2 ; python_version >= "3.9" and python_version < "3.12"
+cffi==1.16.0 ; python_version >= "3.9" and python_version < "3.12" and (implementation_name == "pypy" or platform_python_implementation != "PyPy")
 cfgv==3.4.0 ; python_version >= "3.9" and python_version < "3.12"
 charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "3.12"
 click==8.1.7 ; python_version >= "3.9" and python_version < "3.12"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.12" and (platform_system == "Windows" or sys_platform == "win32")
 comm==0.2.1 ; python_version >= "3.9" and python_version < "3.12"
 contourpy==1.2.0 ; python_version >= "3.9" and python_version < "3.12"
-coverage[toml]==7.4.0 ; python_version >= "3.9" and python_version < "3.12"
+coverage[toml]==7.4.1 ; python_version >= "3.9" and python_version < "3.12"
+cryptography==42.0.2 ; python_version >= "3.9" and python_version < "3.12"
 cycler==0.12.1 ; python_version >= "3.9" and python_version < "3.12"
 darglint==1.8.1 ; python_version >= "3.9" and python_version < "3.12"
-datasets==2.14.4 ; python_version >= "3.9" and python_version < "3.12"
-debugpy==1.8.0 ; python_version >= "3.9" and python_version < "3.12"
+datasets==2.17.0 ; python_version >= "3.9" and python_version < "3.12"
+debugpy==1.8.1 ; python_version >= "3.9" and python_version < "3.12"
 decorator==5.1.1 ; python_version >= "3.9" and python_version < "3.12"
-dill==0.3.7 ; python_version >= "3.9" and python_version < "3.12"
+dill==0.3.8 ; python_version >= "3.9" and python_version < "3.12"
 distlib==0.3.8 ; python_version >= "3.9" and python_version < "3.12"
 docutils==0.20.1 ; python_version >= "3.9" and python_version < "3.12"
-dparse==0.6.3 ; python_version >= "3.9" and python_version < "3.12"
+dparse==0.6.4b0 ; python_version >= "3.9" and python_version < "3.12"
 exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
 executing==2.0.1 ; python_version >= "3.9" and python_version < "3.12"
 filelock==3.13.1 ; python_version >= "3.9" and python_version < "3.12"
-fonttools==4.47.2 ; python_version >= "3.9" and python_version < "3.12"
+fonttools==4.48.1 ; python_version >= "3.9" and python_version < "3.12"
 frozenlist==1.4.1 ; python_version >= "3.9" and python_version < "3.12"
-fsspec==2023.12.2 ; python_version >= "3.9" and python_version < "3.12"
-fsspec[http]==2023.12.2 ; python_version >= "3.9" and python_version < "3.12"
-furo==2023.9.10 ; python_version >= "3.9" and python_version < "3.12"
+fsspec==2023.10.0 ; python_version >= "3.9" and python_version < "3.12"
+fsspec[http]==2023.10.0 ; python_version >= "3.9" and python_version < "3.12"
+furo==2024.1.29 ; python_version >= "3.9" and python_version < "3.12"
 gitdb==4.0.11 ; python_version >= "3.9" and python_version < "3.12"
 gitpython==3.1.41 ; python_version >= "3.9" and python_version < "3.12"
-huggingface-hub==0.20.2 ; python_version >= "3.9" and python_version < "3.12"
-identify==2.5.33 ; python_version >= "3.9" and python_version < "3.12"
+huggingface-hub==0.20.3 ; python_version >= "3.9" and python_version < "3.12"
+identify==2.5.34 ; python_version >= "3.9" and python_version < "3.12"
 idna==3.6 ; python_version >= "3.9" and python_version < "3.12"
 imagesize==1.4.1 ; python_version >= "3.9" and python_version < "3.12"
 importlib-metadata==7.0.1 ; python_version >= "3.9" and python_version < "3.10"
 importlib-resources==6.1.1 ; python_version >= "3.9" and python_version < "3.10"
 iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "3.12"
-ipykernel==6.28.0 ; python_version >= "3.9" and python_version < "3.12"
+ipykernel==6.29.2 ; python_version >= "3.9" and python_version < "3.12"
 ipython==8.18.1 ; python_version >= "3.9" and python_version < "3.12"
-ipywidgets==8.1.1 ; python_version >= "3.9" and python_version < "3.12"
+ipywidgets==8.1.2 ; python_version >= "3.9" and python_version < "3.12"
 jaxtyping==0.2.25 ; python_version >= "3.9" and python_version < "3.12"
 jedi==0.19.1 ; python_version >= "3.9" and python_version < "3.12"
 jinja2==3.1.3 ; python_version >= "3.9" and python_version < "3.12"
 joblib==1.3.2 ; python_version >= "3.9" and python_version < "3.12"
 jupyter-client==8.6.0 ; python_version >= "3.9" and python_version < "3.12"
 jupyter-core==5.7.1 ; python_version >= "3.9" and python_version < "3.12"
-jupyterlab-widgets==3.0.9 ; python_version >= "3.9" and python_version < "3.12"
+jupyterlab-widgets==3.0.10 ; python_version >= "3.9" and python_version < "3.12"
 kiwisolver==1.4.5 ; python_version >= "3.9" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "3.12"
-markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "3.12"
+markupsafe==2.1.5 ; python_version >= "3.9" and python_version < "3.12"
+marshmallow==3.20.2 ; python_version >= "3.9" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_version >= "3.9" and python_version < "3.12"
 matplotlib==3.8.2 ; python_version >= "3.9" and python_version < "3.12"
 mdurl==0.1.2 ; python_version >= "3.9" and python_version < "3.12"
 mpmath==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
-multidict==6.0.4 ; python_version >= "3.9" and python_version < "3.12"
-multiprocess==0.70.15 ; python_version >= "3.9" and python_version < "3.12"
-nest-asyncio==1.5.8 ; python_version >= "3.9" and python_version < "3.12"
+multidict==6.0.5 ; python_version >= "3.9" and python_version < "3.12"
+multiprocess==0.70.16 ; python_version >= "3.9" and python_version < "3.12"
+nest-asyncio==1.6.0 ; python_version >= "3.9" and python_version < "3.12"
 networkx==3.2.1 ; python_version >= "3.9" and python_version < "3.12"
 nodeenv==1.8.0 ; python_version >= "3.9" and python_version < "3.12"
-numpy==1.26.3 ; python_version >= "3.9" and python_version < "3.12"
+numpy==1.26.4 ; python_version >= "3.9" and python_version < "3.12"
 nvidia-cublas-cu11==11.11.3.6 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
 nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 nvidia-cuda-cupti-cu11==11.8.87 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
@@ -87,34 +90,36 @@ nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machi
 nvidia-cusparse-cu11==11.7.5.86 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
 nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 nvidia-nccl-cu11==2.19.3 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
-nvidia-nccl-cu12==2.18.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 nvidia-nvjitlink-cu12==12.3.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 nvidia-nvtx-cu11==11.8.86 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
 nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.9" and python_version < "3.12"
-pandas==2.1.4 ; python_version >= "3.9" and python_version < "3.12"
+pandas==2.2.0 ; python_version >= "3.9" and python_version < "3.12"
 parso==0.8.3 ; python_version >= "3.9" and python_version < "3.12"
 pastel==0.2.1 ; python_version >= "3.9" and python_version < "3.12"
 pbr==6.0.0 ; python_version >= "3.9" and python_version < "3.12"
 pexpect==4.9.0 ; python_version >= "3.9" and python_version < "3.12" and sys_platform != "win32"
 pillow==10.2.0 ; python_version >= "3.9" and python_version < "3.12"
-platformdirs==4.1.0 ; python_version >= "3.9" and python_version < "3.12"
-pluggy==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
+platformdirs==4.2.0 ; python_version >= "3.9" and python_version < "3.12"
+pluggy==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
 poethepoet==0.24.4 ; python_version >= "3.9" and python_version < "3.12"
-pre-commit==3.6.0 ; python_version >= "3.9" and python_version < "3.12"
+pre-commit==3.6.1 ; python_version >= "3.9" and python_version < "3.12"
 prompt-toolkit==3.0.43 ; python_version >= "3.9" and python_version < "3.12"
 protobuf==4.25.2 ; python_version >= "3.9" and python_version < "3.12"
-psutil==5.9.7 ; python_version >= "3.9" and python_version < "3.12"
+psutil==5.9.8 ; python_version >= "3.9" and python_version < "3.12"
 ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "3.12" and sys_platform != "win32"
 pure-eval==0.2.2 ; python_version >= "3.9" and python_version < "3.12"
-pyarrow==14.0.2 ; python_version >= "3.9" and python_version < "3.12"
-pycparser==2.21 ; python_version >= "3.9" and python_version < "3.12" and implementation_name == "pypy"
+pyarrow-hotfix==0.6 ; python_version >= "3.9" and python_version < "3.12"
+pyarrow==15.0.0 ; python_version >= "3.9" and python_version < "3.12"
+pycparser==2.21 ; python_version >= "3.9" and python_version < "3.12" and (implementation_name == "pypy" or platform_python_implementation != "PyPy")
+pydantic==1.10.14 ; python_version >= "3.9" and python_version < "3.12"
 pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.12"
 pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "3.12"
 pytest-cov==4.1.0 ; python_version >= "3.9" and python_version < "3.12"
-pytest==7.4.4 ; python_version >= "3.9" and python_version < "3.12"
+pytest==8.0.0 ; python_version >= "3.9" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.12"
-pytz==2023.3.post1 ; python_version >= "3.9" and python_version < "3.12"
+pytz==2024.1 ; python_version >= "3.9" and python_version < "3.12"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "3.12"
 pyzmq==25.1.2 ; python_version >= "3.9" and python_version < "3.12"
@@ -122,14 +127,15 @@ regex==2023.12.25 ; python_version >= "3.9" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.9" and python_version < "3.12"
 rich==13.7.0 ; python_version >= "3.9" and python_version < "3.12"
 ruamel-yaml-clib==0.2.8 ; platform_python_implementation == "CPython" and python_version < "3.12" and python_version >= "3.9"
-ruamel-yaml==0.18.5 ; python_version >= "3.9" and python_version < "3.12"
-ruff==0.1.13 ; python_version >= "3.9" and python_version < "3.12"
-safetensors==0.4.1 ; python_version >= "3.9" and python_version < "3.12"
-safety==2.3.4 ; python_version >= "3.9" and python_version < "3.12"
-scikit-learn==1.3.2 ; python_version >= "3.9" and python_version < "3.12"
-scipy==1.11.4 ; python_version >= "3.9" and python_version < "3.12"
+ruamel-yaml==0.18.6 ; python_version >= "3.9" and python_version < "3.12"
+ruff==0.2.1 ; python_version >= "3.9" and python_version < "3.12"
+safetensors==0.4.2 ; python_version >= "3.9" and python_version < "3.12"
+safety-schemas==0.0.2 ; python_version >= "3.9" and python_version < "3.12"
+safety==3.0.1 ; python_version >= "3.9" and python_version < "3.12"
+scikit-learn==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
+scipy==1.12.0 ; python_version >= "3.9" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_version >= "3.9" and python_version < "3.12"
-setuptools==69.0.3 ; python_version >= "3.9" and python_version < "3.12"
+setuptools==69.1.0 ; python_version >= "3.9" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.9" and python_version < "3.12"
 smmap==5.0.1 ; python_version >= "3.9" and python_version < "3.12"
 snowballstemmer==2.2.0 ; python_version >= "3.9" and python_version < "3.12"
@@ -145,27 +151,28 @@ sphinxcontrib-htmlhelp==2.0.5 ; python_version >= "3.9" and python_version < "3.
 sphinxcontrib-jsmath==1.0.1 ; python_version >= "3.9" and python_version < "3.12"
 sphinxcontrib-qthelp==1.0.7 ; python_version >= "3.9" and python_version < "3.12"
 sphinxcontrib-serializinghtml==1.1.10 ; python_version >= "3.9" and python_version < "3.12"
-sphinxemoji==0.2.0 ; python_version >= "3.9" and python_version < "3.12"
+sphinxemoji==0.3.1 ; python_version >= "3.9" and python_version < "3.12"
 sphinxext-opengraph==0.9.1 ; python_version >= "3.9" and python_version < "3.12"
 stack-data==0.6.3 ; python_version >= "3.9" and python_version < "3.12"
 stevedore==5.1.0 ; python_version >= "3.9" and python_version < "3.12"
 sympy==1.12 ; python_version >= "3.9" and python_version < "3.12"
 threadpoolctl==3.2.0 ; python_version >= "3.9" and python_version < "3.12"
-tokenizers==0.15.0 ; python_version >= "3.9" and python_version < "3.12"
+tokenizers==0.15.2 ; python_version >= "3.9" and python_version < "3.12"
 tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.12"
-torch==2.1.2 ; python_version >= "3.9" and python_version < "3.12"
+torch==2.2.0 ; python_version >= "3.9" and python_version < "3.12"
 tornado==6.4 ; python_version >= "3.9" and python_version < "3.12"
-tqdm==4.66.1 ; python_version >= "3.9" and python_version < "3.12"
+tqdm==4.66.2 ; python_version >= "3.9" and python_version < "3.12"
 traitlets==5.14.1 ; python_version >= "3.9" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.36.2 ; python_version >= "3.9" and python_version < "3.12"
-triton==2.1.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.37.2 ; python_version >= "3.9" and python_version < "3.12"
+triton==2.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 typeguard==2.13.3 ; python_version >= "3.9" and python_version < "3.12"
+typer==0.9.0 ; python_version >= "3.9" and python_version < "3.12"
 typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "3.12"
-tzdata==2023.4 ; python_version >= "3.9" and python_version < "3.12"
-urllib3==2.1.0 ; python_version >= "3.9" and python_version < "3.12"
+tzdata==2024.1 ; python_version >= "3.9" and python_version < "3.12"
+urllib3==2.2.0 ; python_version >= "3.9" and python_version < "3.12"
 virtualenv==20.25.0 ; python_version >= "3.9" and python_version < "3.12"
 wcwidth==0.2.13 ; python_version >= "3.9" and python_version < "3.12"
-widgetsnbextension==4.0.9 ; python_version >= "3.9" and python_version < "3.12"
+widgetsnbextension==4.0.10 ; python_version >= "3.9" and python_version < "3.12"
 xxhash==3.4.1 ; python_version >= "3.9" and python_version < "3.12"
 yarl==1.9.4 ; python_version >= "3.9" and python_version < "3.12"
 zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.10"
