--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Install dependencies
       run: |
         make install-ci
+        source .venv/bin/activate
 
     - name: Run style checks
       run: |
