--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,11 +137,11 @@ omit = [
 
 [tool.coverage.report]
 exclude_lines = [
-    "pragma: no-cover",
-    "pass",
-    "raise",
-    "except",
-    "raise NotImplementedError",
+  "pragma: no-cover",
+  "pass",
+  "raise",
+  "except",
+  "raise NotImplementedError",
 ]
 
 
@@ -157,73 +157,63 @@ packages = ["inseq"]
 [tool.ruff]
 target-version = "py39"
 exclude = [
-    ".git",
-    ".vscode",
-    ".github",
-    "__pycache__",
-    "docs/source/conf.py",
-    "old",
-    "build",
-    "htmlcov",
-    "dev_examples",
-    "dist",
-    ".tox",
-    "temp",
-    "*.egg",
-    "venv",
-    ".venv",
+  ".git",
+  ".vscode",
+  ".github",
+  "__pycache__",
+  "docs/source/conf.py",
+  "old",
+  "build",
+  "htmlcov",
+  "dev_examples",
+  "dist",
+  ".tox",
+  "temp",
+  "*.egg",
+  "venv",
+  ".venv",
 ]
 fix = true
-ignore = [
-    "B006", # mutable default argument
-    "C901", # function too complex
-    "E501", # line too long (handled by format)
-    "E731", # do not assign a lambda expression, use a def
-    "E741", # ambiguous variable name
-    "F722", # syntax error in forward annotation (as used by jaxtyping)
-    "F821", # undefined name
-    "PLR2004", # unnamed numerical constants used
-    "PLR0913", # too many arguments
-    "PLR0915", # too many statements
-    "W191", # indentation contains tabs (handled by format)
-]
 line-length = 119
-select = [
-    "E", # pycodestyle errors
-    "F", # pyflakes
-    "W", # pycodestyle warnings
-    "C", # flake8-comprehensions
-    #"D", # flake8-docstrings
-    "B", # flake8-bugbear
-    "I", # isort
-    "UP", # flake8-pyupgrade
-    "PLC", # flake8-pylint
-    "PLE", # flake8-pylint
-    "PLR", # flake8-pylint
-    "PLW", # flake8-pylint
-]
 src = ["inseq", "examples", "tests"]
 extend-include = ["*.ipynb"]
+
+[tool.ruff.lint]
 external = [
   "DOC",  # pydoclint
 ]
-
-[tool.ruff.per-file-ignores]
-"__init__.py" = ["F401"]
-"**/examples/*" = ["B018", "E402"]
-
-[tool.ruff.isort]
-known-first-party = ["inseq"]
-order-by-type = true
-
-[tool.ruff.pylint]
-max-branches = 22
-
-[tool.ruff.pyupgrade]
-keep-runtime-typing = true
-
-[tool.ruff.pydocstyle]
-convention = "google"
+ignore = [
+  "B006", # mutable default argument
+  "C901", # function too complex
+  "E501", # line too long (handled by format)
+  "E731", # do not assign a lambda expression, use a def
+  "E741", # ambiguous variable name
+  "F722", # syntax error in forward annotation (as used by jaxtyping)
+  "F821", # undefined name
+  "PLR2004", # unnamed numerical constants used
+  "PLR0913", # too many arguments
+  "PLR0915", # too many statements
+  "W191", # indentation contains tabs (handled by format)
+]
+select = [
+  "E", # pycodestyle errors
+  "F", # pyflakes
+  "W", # pycodestyle warnings
+  "C", # flake8-comprehensions
+  #"D", # flake8-docstrings
+  "B", # flake8-bugbear
+  "I", # isort
+  "UP", # flake8-pyupgrade
+  "PLC", # flake8-pylint
+  "PLE", # flake8-pylint
+  "PLR", # flake8-pylint
+  "PLW", # flake8-pylint
+]
+per-file-ignores = { "__init__.py" = ["F401"], "**/examples/*" = ["B018", "E402"] }
+isort = { known-first-party = ["inseq"], order-by-type = true}
+pylint = { max-branches = 22 }
+pyupgrade = { keep-runtime-typing = true }
+pydocstyle = { convention = "google" }
 
 
 [tool.pydoclint]
