--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,8 @@ lint = [
   "pytest>=7.2.0",
   "pytest-cov>=4.0.0",
   "pytest-xdist>=3.5.0",
-  "ruff>=0.2.0"
+  "ruff>=0.2.0",
+  "virtualenv>=20.26.6"
 ]
 sklearn = [
   "scikit-learn>=1.5.1",
